--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,9 @@ h4 {
 }
 
 
-/* Contact */
+/* subscribe */
 
-#contact {
+#subscribe {
     padding-top: 10px;
     height: 100px;
     background-color: black;
